compiler/tests/invalid_programs/dependent_types/ambiguous_independent_overloads.jm
!TypeError

def foo(i:Int)
  puts(i)
end

def foo(i:Int)
end

def bar(o)
  foo(o)
end

bar(12)
